--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "es2020": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 11,
@@ -12,6 +13,5 @@
     },
     "rules": {
         "linebreak-style": 0
-    },
-    "import/extensions": [<severity>, "always"]
+    }
 }
