--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "bootstrap": "^4.5.0"
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "prettier": "^2.0.5"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0"
   },
   "scripts": {
