--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,15 @@
 {
-    "env": {
-        "browser": true,
-        "es2020": true
-    },
-    "extends": [
-        "airbnb-base",
-        "prettier"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 11,
-        "sourceType": "module"
-    },
-    "rules": {
-        "linebreak-style": 0
-    }
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "extends": ["airbnb-base", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  },
+  "rules": {
+    "linebreak-style": 0,
+    "import/extensions": 0
+  }
 }
