--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,14 @@
+
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": ["airbnb-base", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "rules": {
-    "linebreak-style": 0,
-    "import/extensions": 0
+	"extends": ["airbnb-base", "prettier"],
+	"plugins": ["prettier", "jest"],
+	"rules": {
+	  "prettier/prettier": ["error"],
+	  "class-methods-use-this": "off"
+	},
+	"env": {
+	  "jest/globals": true,
+	  "browser": true,
+	  "node": true
+	}
   }
-}
