--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
-    "prettier": "^2.0.5"
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
@@ -20,7 +19,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.2.2"
+    "jest": "^26.2.2",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "test": "jest --collect-coverage"
