--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^26.0.8",
     "babel-jest": "^26.2.2",
     "cypress": "^4.12.0",
@@ -23,7 +24,9 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "test": "jest --collect-coverage"
+    "test": "jest --collect-coverage",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
